--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pyyoshi/shortuuid-php",
+  "name": "andrew867/shortuuid-php",
   "description": "",
   "type": "library",
   "keywords": [
