--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   },
   "require": {
     "php": ">=5.6",
-    "ramsey/uuid": "^4.2",
+    "ramsey/uuid": "*",
     "moontoast/math": "^1.1"
   },
   "require-dev": {
